# votor

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  pyproject.toml  todo.md
.claude/: settings.local.json
.vectormind/: .repl_history  analytics.db  config.json  file_hashes.json  index_meta.json  prompts.json
.vectormind/qdrant/: meta.json
.vectormind/qdrant/collection/votor/: storage.sqlite
votor/: __init__.py  analytics.py  chunker.py  dashboard.py  db.py  events.py  indexer.py  init_flow.py  providers.py  query.py  repl.py  tools.py
votor/static/: index.html
